# stack-buffer

./: Cargo.toml  README.md
.github/workflows/: cid.yml
benches/: buf.rs
src/: bufreader.rs  bufwriter.rs  lib.rs
