[package]
name = "stack-buffer"
version = "0.3.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "Stack buffer provides alternatives to BufReader and BufWriter allocated on the stack instead of the heap."
repository = "https://github.com/SUPERCILEX/stack-buffer"
keywords = ["buf", "buffer", "stack"]
categories = ["caching", "data-structures", "memory-management"]
license = "Apache-2.0"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "buf"
harness = false
